Updating style.css

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ code {
 
 /* Animation done by https://github.com/daneden */
 /* https://github.com/daneden/animate.css */
-
+/* cesarnog */
 #user-name {
  width: 100%;
 }
